agregué encabezado html, con saludo de bienvenida

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>BIENVENIDOS A LA ASIGNATURA DE DESARROLLO DE APLICACIONES WEB</h1>
 </body>
 </html>
